# GSV

./: CMakeLists.txt  LICENSE  README.md
GSV/gsv-adapters/: CMakeLists.txt
GSV/gsv-adapters/include/: adapters.hpp
GSV/gsv-adapters/include/qml_model-adapter/: qml_model_adapter.hpp
GSV/gsv-adapters/include/qml_model_adapter/: qml_model_adapter.hpp
GSV/gsv-adapters/src/qml_model-adapter/: qml_model_adapter.cpp
GSV/gsv-adapters/src/qml_model_adapter/: qml_model_adapter.cpp
GSV/gsv-core/: CMakeLists.txt
GSV/gsv-core/include/: core.hpp  information_state.hpp  possibility.hpp  referent_system.hpp
GSV/gsv-core/src/: information_state.cpp  possibility.cpp  referent_system.cpp
GSV/gsv-evaluator/: CMakeLists.txt
GSV/gsv-evaluator/include/: evaluator.hpp
GSV/gsv-evaluator/src/: evaluator.cpp
GSV/gsv-logger/: CMakeLists.txt
GSV/gsv-logger/include/gsv-logger/: logger_utils.hpp  null_logger.hpp
GSV/gsv-relations/: CMakeLists.txt
GSV/gsv-relations/include/: semantic_relations.hpp
GSV/gsv-relations/src/: semantic_relations.cpp
GSV/gsv-utils/: CMakeLists.txt
GSV/gsv-utils/include/gsv-utils/: error_reporting.hpp
GSV/gsv-utils/src/: error_reporting.cpp
GSV/include/: GSV.hpp  evaluator.hpp  semantic_relations.hpp
GSV/include/interfaces/: imodel.hpp
GSV/include/logger/: logger.hpp
GSV/include/semantics/: information_state.hpp  possibility.hpp  referent_system.hpp  semantic_relations.hpp
GSV/include/utility/: formatter.hpp
GSV/interfaces/: ilogger.hpp  imodel.hpp
GSV/src/: evaluator.cpp  semantic_relations.cpp
GSV/src/semantics/: information_state.cpp  possibility.cpp  referent_system.cpp  semantic_relations.cpp
GSV/src/utility/: formatter.cpp
docs/html/: _g_s_v_8hpp.html  _g_s_v_8hpp_source.html  adapters_8hpp.html  adapters_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classiif__sadaf_1_1talk_1_1_g_s_v_1_1_q_m_l_model_adapter-members.html  classiif__sadaf_1_1talk_1_1_g_s_v_1_1_q_m_l_model_adapter.html  classiif__sadaf_1_1talk_1_1_g_s_v_1_1_q_m_l_model_adapter.js  core_8hpp.html  core_8hpp_source.html  dir_048a3b1ebf64a54432afd62305446901.html  dir_048a3b1ebf64a54432afd62305446901.js  dir_1b2d878fdd04d86c5ff8030c6ba3fe25.html  dir_1b2d878fdd04d86c5ff8030c6ba3fe25.js  dir_2670355794f6a9edb7e75d9119c3a065.html  dir_2670355794f6a9edb7e75d9119c3a065.js  dir_3f658c2df5993ca6a1890a6f9b25e05f.html  dir_3f658c2df5993ca6a1890a6f9b25e05f.js  dir_5c7c68df4cba80dd30f8883465079c31.html  dir_5c7c68df4cba80dd30f8883465079c31.js  dir_6af20c6bb6386bfe90ad4eb06599f779.html  dir_6af20c6bb6386bfe90ad4eb06599f779.js  dir_7f2108af832acb2e470cd40087d7b547.html  dir_7f2108af832acb2e470cd40087d7b547.js  dir_81f5df7643c41eecc87a58ad35bc7dc1.html  dir_81f5df7643c41eecc87a58ad35bc7dc1.js  dir_82ad2f31386a13b59541e28e1a1a5f0d.html  dir_82ad2f31386a13b59541e28e1a1a5f0d.js  dir_84aaacd9d29d2c1dac0365e2d11d6e07.html  dir_84aaacd9d29d2c1dac0365e2d11d6e07.js  dir_85886c32337d1a6586db7352954d16d6.html  dir_85886c32337d1a6586db7352954d16d6.js  dir_941ca5021095e76088407fd7b90db0f5.html  dir_941ca5021095e76088407fd7b90db0f5.js  dir_95ea479dc9439dc712201069f0c24a4e.html  dir_95ea479dc9439dc712201069f0c24a4e.js  dir_984d206019a727f577e1fb9e4f1245b9.html  dir_984d206019a727f577e1fb9e4f1245b9.js  (+99 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  typedefs_0.js  (+5 more)
